--- a/plot.ipynb
+++ b/plot.ipynb
@@ -211,14 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "aee9e39d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -511,6 +512,27 @@
     "             cmap = 'Reds',\n",
     "             legend_label = 'Actual Mean (Per 100,000)',\n",
     "             save_path = 'Pred_mean.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "adb19621",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(result)"
    ]
   }
  ],
